feat: add public API for calculating delivery cost and time, including request and response models